﻿zg 29.05.2015 23:39:54 +0200 - build 4384

1. 0002997: Improper sorting after Compare Folders.

zg 29.05.2015 19:12:18 +0200 - build 4383

1. на чистом профиле FARLANG устанавливается в пустое значение.

svs 21.05.2015 07:33:01 +0300 - build 4382

1. SQLite 3.8.10.2

drkns 18.05.2015 22:39:06 +0200 - build 4381

1. Warnings mix:
   - для vc подавление предупреждений вынесено в отдельный файл
   - -Wextra для gcc.

2. Рефакторинг.

zg 16.05.2015 04:38:48 +0200 - build 4380

1. 0002994: GUID для диалогов в User Menu, вызываемых посредством !?<title>?<init>!.

drkns 15.05.2015 21:52:32 +0200 - build 4379

1. Уточнение 4376.

2. Пара мелочей.

drkns 15.05.2015 00:03:45 +0200 - build 4378

1. Рефакторинг.

drkns 14.05.2015 08:41:28 +0200 - build 4377

1. Уточнение 4364.

drkns 14.05.2015 00:00:00 +0200 - build 4376

1. Рефакторинг.

zg 10.05.2015 02:14:51 +0200 - build 4375

1. 0002991: Dynamic selection mark in panels.

svs 09.05.2015 23:17:24 +0300 - build 4374

1. SQLite 3.8.10.1

drkns 08.05.2015 18:51:45 +0200 - build 4373

1. Ошибка в вычислении размера файла при копировании с учётом ADS.

drkns 08.05.2015 01:29:05 +0200 - build 4372

1. 0002990: Viewer crashed if opened from temporary editor

svs 07.05.2015 20:33:44 +0300 - build 4371

1. SQLite 3.8.10

drkns 07.05.2015 16:23:58 +0200 - build 4370

1. В диалоге прогресса копирования отображается количество обработанных байт.

drkns 06.05.2015 22:16:11 +0200 - build 4369

1. И ещё раз.

drkns 06.05.2015 20:26:51 +0200 - build 4368

1. И ещё раз.

drkns 06.05.2015 17:29:36 +0200 - build 4367

1. Пара уточнений 4366.

drkns 06.05.2015 16:39:28 +0200 - build 4366

1. С форума: Авто-дополнение переменных окружения в ком. строке

2. far:config: опция Editor.WordDiv переименована в System.WordDiv.

3. Рефакторинг.

drkns 04.05.2015 14:51:59 +0200 - build 4365

1. Уточнение 4364.

drkns 04.05.2015 14:42:35 +0200 - build 4364

1. С форума: Падение в редакторе при вызове замены текста при [x] Pick up the word