@@ -1,4 +1,8 @@
-﻿zg 29.05.2015 23:39:54 +0200 - build 4384
+﻿drkns 03.06.2015 20:24:43 +0200 - build 4385
+
+1. 0003000: проблема копирования экрана с ключом /ag
+
+zg 29.05.2015 23:39:54 +0200 - build 4384
 
 1. 0002997: Improper sorting after Compare Folders.
 
